--- a/tp/SistemaDeApoyoADecisiones/pom.xml
+++ b/tp/SistemaDeApoyoADecisiones/pom.xml
@@ -9,6 +9,7 @@
 	<name>SistemaDeApoyoADecisiones Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	
+		
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -18,7 +19,14 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+	
+	<repositories>
+    <repository>
+      <id>boundless</id>
+      <url>http://repo.boundlessgeo.com/main/</url>
+    </repository>
+  	</repositories>
+	
 	<dependencies>
 
 		<!-- Web -->
@@ -61,7 +69,42 @@
 			<artifactId>bootstrap</artifactId>
 			<version>3.3.7</version>
 		</dependency>
+		
+		<!-- JUnit -->
+		 <dependency>
+	        <groupId>junit</groupId>
+	        <artifactId>junit</artifactId>
+	        </dependency>
+	        
+	    <dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.0</version>
+	</dependency>
+	<dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+	        </dependency>
+	     
+	     <dependency>
+            <groupId>org.uqbar-project</groupId>
+            <artifactId>uqbar-domain</artifactId>
+            <version>3.6.1</version>
+        </dependency>   
+	     
+	    <dependency>
+		    <groupId>net.sourceforge.javacsv</groupId>
+		    <artifactId>javacsv</artifactId>
+		    <version>2.1</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
@@ -70,6 +113,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
+			<plugin>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <version>3.1</version>
+		        <configuration>
+		          <source>1.8</source>
+		          <target>1.8</target>
+		        </configuration>
+	      </plugin>
+	      <plugin>
+		      	<groupId>org.codehaus.mojo</groupId>
+		      	<artifactId>javacc-maven-plugin</artifactId>
+      </plugin>
+   	</plugins>
 	</build>
 </project>
